third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/transparent-enum-not-error.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    #[error(transparent)]
    Other { message: String },
}

fn main() {}
